2006-04-04  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtkcombobox.c (:minimum-width, gtk_combo_box_size_request):
	Introduce minimum-width style property.
	* gtk/gtkcombobox.c (gtk_combo_box_set_popup_widget,
	gtk_combo_box_list_setup): Make sure the hildon-modified frame gets
	zero border-width.
	IMP-10

2006-04-04  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentry.c (gtk_entry_enter_text): Handle position=-1 return
	value from gtk_editable_insert_text() in a special and don't move the
	cursor to avoid resetting selection.
	IMP-13

2006-04-04  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentrycompletion.c (gtk_entry_completion_init): Set a name for
	the popup window widget to enable more specific theming.
	IMP-6

2006-04-04  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkexpander.c (gtk_expander_paint): Replace gtk_paint_expander()
	call with gtk_paint_arrow() for Hildon-like theming.
	IMP-4

2006-04-04  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkfilechooserbutton.c (:hildonlike,
	gtk_file_chooser_button_set_property): Add style property and disable
	the use of combobox even in select-folder mode.
	* gtk/gtkfilechooserbutton.c (gtk_file_chooser_button_init,
	gtk_file_chooser_button_style_set): Finalize the button layout in
	style-set when we know whether to imitate a combobox (in open mode)
	IMP-4

2006-03-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtktreeprivate.h
	* gtktreeviewcolumn.c
	(_gtk_tree_view_column_cell_set_cell_data_for_validation): Add variant
	of _gtk_tree_view_column_cell_set_cell_data() which skips setting cell
	data on all cells which have a fixed width and height set. Should stop
	triggering excessive icon loading in hildon-fm.
	* gtktreeview.c (validate_row): Use the new function.
	N#22807

2006-03-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Merge from GNOME CVS. N#22537

    2005-11-27  Matthias Clasen  <mclasen@redhat.com>
